gccida/g2/visit_expression
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:713:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:715:4: error: expected ';' after expression
rtx v12; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:715:5: error: use of undeclared identifier 'v12'
rtx v12; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:716:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:717:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:717:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:738:4: error: expected ';' after expression
rtx v35; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:738:5: error: use of undeclared identifier 'v35'
rtx v35; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:739:4: error: expected ';' after expression
rtx v36; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:739:5: error: use of undeclared identifier 'v36'
rtx v36; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:743:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:743:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:752:4: error: expected ';' after expression
rtx v49; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:752:5: error: use of undeclared identifier 'v49'
rtx v49; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:753:4: error: expected ';' after expression
rtx v50; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:753:5: error: use of undeclared identifier 'v50'
rtx v50; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:754:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:795:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[( int)v18] = v21; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/ssa-ccp.c:805:12: error: expected ';' after expression
v5 = ( rtx)insn[2]; 
           ^
           ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/visit_expression/src/obj/ssa-ccp.o] Error 1
